--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
 .App {
-  background-color: #f1f7ff;
+  background-color: #c1d5ff;
   font-family: 'Quicksand', sans-serif;
 
 }
