--- a/src/index.css
+++ b/src/index.css
@@ -26,4 +26,11 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+
+}
+
+
+
+html{
+  font-size: small;
 }
