--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 .App {
-  background-color: #c1d5ff;
-  font-family: 'Quicksand', sans-serif;
+  background-color: rgb(255, 255, 255);
+  font-family: 'Lato', sans-serif;
+ 
+  margin-top : 2px;
+  margin-bottom : 2px;
+
+  font-size: small;
+
 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
