--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,16 @@
 @tailwind utilities;
 
 
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 .App {
-  background-color: rgb(255, 255, 255);
 
-  font-family: 'PT Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
  
   margin-top : 2px;
   margin-bottom : 2px;
 
-  font-size: small;
+
 
 }
 
